03_kubernetes/ic-group.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ic-group
spec: {}
status: {}
